<resources>
    <string name="app_name">Survey Application</string>
    <string name="content_desc_image">This is image </string>
    <string name="error_email_empty">Please enter your email</string>
    <string name="error_name_empty">Please enter your name</string>
    <string name="error_password_empty">Please enter your password</string>
    <string name="error_username">Please enter your Username</string>
    <string name="error_new_password_empty">Please enter your new password</string>
    <string name="error_current_password_empty">Please enter your current password</string>
    <string name="error_confirm_password_empty">Please enter your confirm password</string>
    <string name="error_address_empty">Please enter your Address</string>
    <string name="error_email_invalid">Please enter a valid email</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="blank_question">Blank question field is invalid.</string>
    <string name="blank_answer">Blank answer field is invalid.</string>
    <string name="blank_comment">Blank comment field is invalid.</string>
    <string name="please_choose_category">Please choose category.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_form">Form</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="empty_string"> </string>
    <string name="heading_fragments">खण्ड कः पारिवारिक विवरण, आय तथा वसोवास</string>
    <string name="heading_fragments_b">खण्ड खः मानविय तथा सामाजिक विकास – स्वास्थ्य</string>
    <string name="ethnicity">जातियताः</string>
    <string name="brahman">व्राम्हृण</string>
    <string name="chhetri">क्षेत्री</string>
    <string name="newar">नेवार</string>
    <string name="gurung">गुरुङ्ग</string>
    <string name="magar">मगर</string>
    <string name="tamang">तामाङ्ग</string>
    <string name="thakuri">ठकुरी</string>
    <string name="damai">दमाई</string>
    <string name="kami">कामी</string>
    <string name="sarki">सार्की</string>
    <string name="bk">बि.क./सुनार</string>
    <string name="muslim">मुसलमान</string>
    <string name="yogi">योगी/गिरी/सन्यासी/भारती/बन</string>
    <string name="majhi">माझी</string>
    <string name="yadav">यादव</string>
    <string name="tharu">थारु</string>
    <string name="chaudhary">चौधरी</string>
    <string name="danuwar">दनुवार</string>
    <string name="other">अन्य</string>
    <string name="religion">धर्मः</string>
    <string name="hindu">हिन्दु</string>
    <string name="buddhism">वौद्ध</string>
    <string name="christian">क्रिश्चीयन</string>
    <string name="kirati">किराती</string>
    <string name="language">मातृभाषाः</string>
    <string name="nepali">नेपाली</string>
    <string name="newari">नेवारी</string>
    <string name="limbu">लिम्बु</string>
    <string name="rai">राई</string>
    <string name="hosue_type">घरको प्रकार तथा किसिमः</string>
    <string name="hosue_type_one">कच्ची र झूप्रो</string>
    <string name="hosue_type_two"> ढुंगा, माटो र खरको छाना</string>
    <string name="hosue_type_three">ढुंगा, माटो र टिनको छाना/ढुंगाको छाना</string>
    <string name="hosue_type_four">प्लाष्टर गरिएको र टिनको छाना</string>
    <string name="hosue_type_five">इटा र ढलानको छाना</string>
    <string name="hosue_type_six"> ढलान (फे्रम स्ट्रक्चर)</string>
    <string name="house_ownership">घरको स्वामित्व</string>
    <string name="house_ownership_one">निजी/आफ्नै घर</string>
    <string name="house_ownership_two">बहालमा</string>
    <string name="house_ownership_three">अरुसंग मिलेर बसेको</string>
    <string name="house_ownership_four">सुकुम्बासी</string>
    <string name="house_rented">तपाईले घर भाडामा दिनु भएको छ ?</string>
    <string name="yes_nepali">छ</string>
    <string name="no_nepali">छैन</string>
    <string name="rented_land">तपाईले जग्गा भाडामा दिनु भएको छ ?</string>
    <string name="rented_area">दिनु भएको भए क्षत्रफल ......</string>
    <string name="monthly_income">औसत मासिक पारिवारिक आम्दानी (हजारमा) …………</string>
    <string name="bank_account_present">परिवारको कुनै सदस्यको बैंक तथा वित्तिय संस्थामा खाता छ?</string>
    <string name="monthly_saving">औसत मासिक पारिवारिक बचत (हजारमा) …………</string>
    <string name="unemployment_in_family">तपाईको परिवारमा कमाउन सक्ने सिपयुक्त व्यक्ति बेरोजगार बसेको छ ? </string>
    <string name="question_twenty_eight">तपाईको परिवारमा कमाउन सक्ने सिपयुक्त व्यक्ति बेरोजगार बसेको छ ? </string>
    <string name="if_unemployed">बसेको भए</string>
    <string name="male_unemployed">पूरुष संख्या..................</string>
    <string name="female_unemployed">महिला संख्या................</string>
    <string name="third_gender_unemployed">तेस्रो लिंगी संख्या............</string>
    <string name="business">तपाईले कस्तो किसिमको व्यापार/ व्यवसाय गर्नु भएको छ ?</string>
    <string name="b1">सुनचाँदी व्यवसाय</string>
    <string name="b2">फेन्सी पसल तथा व्यवसाय</string>
    <string name="b3"> क्लिनिक तथा औषधी पसल तथा व्यवसाय</string>
    <string name="b4"> होटल व्यवसाय</string>
    <string name="b5">भाडा पसल तथा व्यवसाय</string>
    <string name="b6">हर्डवयर पसल तथा व्यवसाय</string>
    <string name="b7">किनारा पसल तथा व्यवसाय</string>
    <string name="b8">टेलर्स</string>
    <string name="b9">दुग्ध व्यवसाय</string>
    <string name="b10">तरकारी तथा फलफुल व्यवसाय</string>
    <string name="b11">इलेक्टोनिक पसल तथा व्यवसाय</string>
    <string name="b12">माछा मासु पसल तथा व्यसाय</string>
    <string name="b13">हेयर सैलुंग तथा सौन्दर्यकला व्यवसाय</string>
    <string name="b14">उद्योग संचालन</string>
    <string name="b15">आर्ट व्यवसाय</string>
    <string name="b16">बेकरी तथा मिष्ठान्न व्यवसाय</string>
    <string name="b17">ठेक्का पट्टा</string>
    <string name="b18">मोवाइल, क्यामरा तथा सि.डि पसल</string>
    <string name="b19">घडि रेडियो टि.भी मर्मत</string>
    <string name="b20">फोटो स्टुडियो</string>
    <string name="b21">फर्निचर पसल तथा व्यवसाय</string>
    <string name="b22">जुत्ता पसल</string>
    <string name="b23">चस्मा पसल</string>
    <string name="b24">खाजाघर तथा चिया पसल</string>
    <string name="b25">पुल हाउस</string>
    <string name="b26">अटो वर्कसप</string>
    <string name="b27">राइस मिल संचालन</string>
    <string name="b28">पेट्रोल पम्प</string>
    <string name="b29">मसला उद्योग</string>
    <string name="b30">ग्याँस पसल तथा डिलर</string>
    <string name="b31">सिसा पसल</string>
    <string name="b32">पुस्तक पसल तथा फोटोकपी</string>
    <string name="b33">कम्प्युटर टेनिंग सेन्टर तथा साईवर पसल तथा व्यवसाय</string>
    <string name="b34">कार्पेट पसल</string>
    <string name="b35">बिज्ञापन मिडिया र केवल सेवा</string>
    <string name="b36">टयुसन सैन्टर</string>
    <string name="b37">हाउजिंग</string>
    <string name="b38">ढुवानी सेवा</string>
    <string name="b39">पार्टी प्यालेस</string>
    <string name="b40">नर्सरी फुल व्यवसायी</string>
    <string name="b41">खोज अनुसन्धान सेन्टर</string>
    <string name="b42">कानुन व्यवसायी र परामर्श सेवा</string>
    <string name="b43">निर्माण व्यवसायी तथा सप्लायर्स</string>
    <string name="b44">मल बिउ उत्पादन</string>
    <string name="b45">बोडिंग स्कुल संचालन</string>
    <string name="b46">सरसफाइ तथा फोहोर मैला संकलन</string>
    <string name="b47">आइ.एम.इ. तथा मनी ट्रान्सफर</string>
    <string name="b48">सहकारी</string>
    <string name="b49">बैक</string>
    <string name="b50">कागज उद्योग तथा छापाखाना</string>
    <string name="b51">पानी फिल्टर</string>
    <string name="b52">भेटनरी पसल तथा सेवा प्रदान</string>
    <string name="b53">फूल खेती</string>
    <string name="b54">नर्सरी फुल व्यवसायी</string>
    <string name="select_one">Please select one option.</string>
    <string name="enter_value">Please enter the value.</string>
    <string name="all_field_empty">All fields cannot be empty.</string>
    <string name="invalid">Invalid</string>
    <string name="laalpurja">तपाईसँग जग्गाको लालपुर्जा छ ?</string>
    <string name="question_b1">तपाईको परिवारमा १ वर्षभित्र मृत्यु भएका सदस्यको विवरण दिनुहोस(छैन भने स्कीप जाने) </string>
    <string name="question_b2">तपाईले छोरा छोरीलाई बिद्यालय पठाउनु भएको छ ?</string>
    <string name="question_b3">बालबच्चालाई कून स्कूलमा पढाउनु हुन्छ ?</string>
    <string name="question_b4">तपाईका छोराछोरी बालश्रमिकको रुपमा काम गरिरहेका छन्?</string>
    <string name="question_b5">यदि छन भने (संख्या उल्लेख गर्ने)  </string>
    <string name="question_b6">सम्लग्न रहेको क्षेत्र </string>
    <string name="question_b7">बिगत ५ बर्ष भित्र तपाईले आफ्ना छोरा छोरीको बिवाह १८ बर्ष अगावै गर्नु भएको छ ? </string>
    <string name="question_b8">यदी छ भने कस्को </string>
    <string name="question_b9">तपाईको परिवारमा कुनै ब्यक्ति अपांग छन् ?</string>
    <string name="question_b10">यदि छ भने</string>
    <string name="question_b11">यदि छ भनेकस्तो कार्ड पाउनु भएको छ ?</string>
    <string name="question_b12">तपाईको परिवारको सदस्यलाई कुनै दीर्घ रोग लागेको छ ?(छैन भने स्कीप जाने)</string>
    <string name="question_b13">यदि छ भने (संख्या उल्लेख गर्ने)</string>
    <string name="community">सामूदायिक</string>
    <string name="non_community">संस्थागत</string>
    <string name="in_country">स्वदेसमा</string>
    <string name="outside_country">बिदेसमा</string>
    <string name="son">छोरा .......</string>
    <string name="son_count">छोरा : </string>
    <string name="daughter_count">छोरी : </string>
    <string name="daughter">छोरी ....</string>
    <string name="b6a">घरेलु कामदार</string>
    <string name="b6b">उद्योग तथा कलकारखाना</string>
    <string name="b6c">ब्यापार</string>
    <string name="b6d">कृषि तथा पशुपालन फर्म</string>
    <string name="b6e">कार्यालय तथा संघसंस्था</string>
    <string name="b6f">सर्कस</string>
    <string name="mental_illnes">मानसिक अपांग</string>
    <string name="autism">अटिजम</string>
    <string name="red">रातो</string>
    <string name="blue">निलो</string>
    <string name="yellow">पहेलो</string>
    <string name="white">सेतो</string>
    <string name="tb">क्षयरोग</string>
    <string name="cancer">क्यान्सर</string>
    <string name="hiv">एच.आई.भि. एड्स</string>
    <string name="sugar">चिनी रोग</string>
    <string name="bp">ब्लड प्रेसर</string>
    <string name="summary_listing_title">कुनै प्रश्नको उत्तर सच्च्याउनु परेमा Scroll गरी सोही प्रश्नमा Click गर्नुहोस।  </string>
    <string name="cancel_nepali">रद्द् गर्ने</string>
    <string name="complete_nepali">पुरा गर्ने</string>
    <string name="edit_title">Are you sure you want to edit the survey?</string>
    <string name="add_new">Add new place to survey</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="houseOwnerName">घरमुलीको नाम थर</string>
    <string name="houseOwner">घरमुली</string>
    <string name="wardNo">वार्ड नं</string>
    <string name="gharNo">घर नं</string>
    <string name="pariwarSankhya">जम्मा परिवार संख्या</string>
    <string name="purushNo">पूरुष संख्य</string>
    <string name="mahilaNo">महिला संख्य</string>
    <string name="TesroNo">तेस्रो लिंगी संख्य</string>
    <string name="purush">पूरुष </string>
    <string name="mahila">महिला </string>
    <string name="tesro">तेस्रो लिंगी </string>
    <string name="pariwarMemberNaam">परिवार सदस्यको नाम दिनुहोस्</string>
    <string name="dad">बाबु</string>
    <string name="mom">आमा</string>
    <string name="chori">छोरी</string>
    <string name="chora">छोरा/बुहारी</string>
</resources>