<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="@dimen/margin_sixteen">

        <TextView
            android:id="@+id/txvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_twenty_four"
            android:text="@string/heading_fragments"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_thirty" />

        <LinearLayout
            android:id="@+id/lnlButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvHeading"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_eight"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>

        <TextView
            android:id="@+id/txvQuestionEighteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnlButtons"
            android:layout_marginTop="@dimen/margin_eight"
            android:text="@string/language"
            android:textSize="@dimen/text_size_twenty_four" />

        <RadioGroup
            android:id="@+id/rdgEighteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvQuestionEighteen"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdgNepali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepali" />

            <RadioButton
                android:id="@+id/rdgNewari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newari" />

            <RadioButton
                android:id="@+id/rdgMagar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/magar" />

            <RadioButton
                android:id="@+id/rdgGurung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gurung" />

            <RadioButton
                android:id="@+id/rdgTamang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tamang" />

            <RadioButton
                android:id="@+id/rdgMuslim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/muslim" />

            <RadioButton
                android:id="@+id/rdgTharu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tharu" />

            <RadioButton
                android:id="@+id/rdgRai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rai" />

            <RadioButton
                android:id="@+id/rdgOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>
    </RelativeLayout>
</ScrollView>