<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="@dimen/margin_sixteen">

        <TextView
            android:id="@+id/txvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_twenty_four"
            android:text="@string/heading_fragments"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_thirty" />

        <LinearLayout
            android:id="@+id/lnlButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvHeading"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_eight"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>

        <TextView
            android:id="@+id/txvQuestionNineteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnlButtons"
            android:layout_marginTop="@dimen/margin_eight"
            android:text="@string/hosue_type"
            android:textSize="@dimen/text_size_twenty_four" />

        <LinearLayout
            android:id="@+id/lnlNineteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvQuestionNineteen"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosue_type_one" />

            <CheckBox
                android:id="@+id/chb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosue_type_two" />

            <CheckBox
                android:id="@+id/chb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosue_type_three" />

            <CheckBox
                android:id="@+id/chb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosue_type_four" />

            <CheckBox
                android:id="@+id/chb5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosue_type_five" />

            <CheckBox
                android:id="@+id/chb6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosue_type_six" />

            <CheckBox
                android:id="@+id/chb7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>