<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="@dimen/margin_sixteen">

        <TextView
            android:id="@+id/txvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_twenty_four"
            android:text="@string/heading_fragments_b"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_thirty" />

        <LinearLayout
            android:id="@+id/lnlButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvHeading"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous" />

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_eight"
                android:layout_weight="1"
                android:text="@string/skip" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_eight"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>

        <TextView
            android:id="@+id/txvQuestionB13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnlButtons"
            android:layout_marginTop="@dimen/margin_eight"
            android:text="@string/question_b13"
            android:textSize="@dimen/text_size_twenty_four" />

        <RadioGroup
            android:id="@+id/rdb13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvQuestionB13"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdbTb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tb" />

            <RadioButton
                android:id="@+id/rdbCancer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/female_unemployed"
                android:text="@string/cancer" />

            <RadioButton
                android:id="@+id/rdbHiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/female_unemployed"
                android:text="@string/hiv" />

            <RadioButton
                android:id="@+id/rdbSugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/female_unemployed"
                android:text="@string/sugar" />

            <RadioButton
                android:id="@+id/rdbBp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/female_unemployed"
                android:text="@string/bp" />
        </RadioGroup>
    </RelativeLayout>
</ScrollView>