<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.survey.project.application.features.form.section1.Question2Fragment">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/houseOwner"
            android:textSize="@dimen/normal_text_size"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnPrevious"
                android:text="@string/previous"
                android:layout_weight="1"
                android:layout_margin="@dimen/ten_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnNext"
                android:text="@string/next"
                android:layout_weight="1"
                android:layout_margin="@dimen/ten_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

       <RadioGroup
           android:layout_marginStart="@dimen/ten_margin"
           android:id="@+id/rgHouseOwner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <RadioButton
               android:id="@+id/rbDad"
               android:layout_width="match_parent"
               android:text="@string/dad"
               android:layout_height="wrap_content"/>

           <RadioButton
               android:id="@+id/rbMom"
               android:layout_width="match_parent"
               android:text="@string/mom"
               android:layout_height="wrap_content"/>

           <RadioButton
               android:id="@+id/rbChora"
               android:layout_width="match_parent"
               android:text="@string/chora"
               android:layout_height="wrap_content"/>

           <RadioButton
               android:id="@+id/rbChori"
               android:layout_width="match_parent"
               android:text="@string/chori"
               android:layout_height="wrap_content"/>

           <RadioButton
               android:id="@+id/rbOther"
               android:layout_width="match_parent"
               android:text="@string/other"
               android:layout_height="wrap_content"/>


       </RadioGroup>
    </LinearLayout>

</FrameLayout>